Taking a Grease Pencil object into Vertex Paint mode crashes the software. #107125

Closed
opened 2023-04-19 11:49:14 +02:00 by Gary Carse · 5 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.49

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b
Worked: (newest version of Blender that worked as expected)

Short description of error
Taking a Grease Pencil object into Vertex Paint mode crashes the software.

Exact steps for others to reproduce the error
Open the attached file.
Select 'bushes.02'.
Go to Vertex Paint mode.
The software will crash immediately.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.49 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Worked: (newest version of Blender that worked as expected) **Short description of error** Taking a Grease Pencil object into Vertex Paint mode crashes the software. **Exact steps for others to reproduce the error** Open the attached file. Select 'bushes.02'. Go to Vertex Paint mode. The software will crash immediately.
Gary Carse added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-19 11:49:15 +02:00
Member

Thanks for the report. Can confirm the crash. I'll check.
(Not a regression AFAICS. Crash is replicable in 2.83)

Thanks for the report. Can confirm the crash. I'll check. (Not a regression AFAICS. Crash is replicable in 2.83)
Pratik Borhade added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-19 13:11:22 +02:00
Member

Think I got a fix

Think I got a fix
Philipp Oeser self-assigned this 2023-04-19 15:32:43 +02:00
Author
First-time contributor

Nice one, guys - thank you for the speedy response!

Will this fix appear in the latest download of Blender?

Nice one, guys - thank you for the speedy response! Will this fix appear in the latest download of Blender?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-19 16:51:27 +02:00
Member

It will be in tomorrows fresh build of 3.6 from https://builder.blender.org/download/daily/
Also in 3.5.1 probably when it comes out (next week?) and 3.3.7 (this will take another month to come out)

It will be in tomorrows fresh build of 3.6 from https://builder.blender.org/download/daily/ Also in 3.5.1 probably when it comes out (next week?) and 3.3.7 (this will take another month to come out)
Author
First-time contributor

Great - Thank you!

Great - Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107125
No description provided.